--- a/whitepaper.html
+++ b/whitepaper.html
@@ -4,118 +4,96 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>BRBR — Whitepaper</title>
-  <meta name="description" content="BRBR memecoin: purpose, vision, roadmap, community, and disclaimers." />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
+<body class="no-audio">
+  <div class="bg">
+    <video class="bgVideo" autoplay muted loop playsinline preload="auto" poster="assets/story.png">
+      <source src="assets/hero-web.mp4" type="video/mp4" />
+    </video>
+    <div class="bgOverlay"></div>
+    <div class="grain"></div>
+  </div>
 
-<body class="page">
-  <video class="bg-video" autoplay muted loop playsinline preload="auto">
-    <source src="assets/hero-web.mp4" type="video/mp4" />
-  </video>
-  <div class="bg-vignette"></div>
-  <canvas id="particles" class="particles" aria-hidden="true"></canvas>
-
-  <audio id="trailerAudio" src="assets/Hero.m4a" preload="auto" loop></audio>
-  <audio id="ambienceAudio" src="assets/atmosphere-sound-effect.mp3" preload="auto" loop></audio>
-  <audio id="uiClick" src="assets/Click.mp3" preload="auto"></audio>
-
-  <header class="header">
-    <div class="brand">
-      <span class="dot"></span>
-      <span class="brand-name">BARBOUR BRBR</span>
-    </div>
-
+  <header class="topbar">
+    <a class="brand" href="index.html">
+      <span class="brandDot"></span>
+      <span class="brandText">BARBOUR <b>BRBR</b></span>
+    </a>
     <nav class="nav">
-      <a href="index.html" class="nav-link">Home</a>
-      <a href="association.html" class="nav-link">Association</a>
-      <a href="whitepaper.html" class="nav-link is-active">Whitepaper</a>
+      <a href="index.html#story" class="navLink">Story</a>
+      <a href="index.html#token" class="navLink">Token</a>
+      <a href="association.html" class="navLink">Association</a>
     </nav>
-
-    <button id="soundToggle" class="sound-toggle" aria-label="Toggle sound" title="Sound">
-      <span class="sound-ic" aria-hidden="true"></span>
-      <span class="sound-txt">SOUND OFF</span>
-    </button>
+    <div class="topActions">
+      <a class="pill small" href="index.html" data-click>← Back</a>
+      <a class="pill small" href="#" data-link="pancakeswap" data-click>Buy</a>
+    </div>
   </header>
 
-  <main>
-    <section class="page-hero">
-      <div class="page-inner">
-        <div class="kicker reveal">BARBOUR BRBR • Whitepaper</div>
-        <h1 class="page-title reveal">Global Youth. <span class="green">Global Hope.</span></h1>
-        <p class="page-sub reveal">
-          BRBR is a <b>community memecoin</b> built around a cinematic narrative: turning silence into strength.
-          This document explains vision, values, and roadmap.
+  <main class="page">
+    <section class="section">
+      <div class="card glass reveal is-visible">
+        <h1 class="sectionTitle">Whitepaper (Lite)</h1>
+        <p class="muted">
+          BRBR is a <b>BSC meme coin</b> inspired by resilience and storytelling.
+          This document explains the vision, the narrative, and the community focus.
         </p>
 
-        <div class="paper">
-          <div class="paper-card reveal">
-            <h2>1) What is BRBR?</h2>
-            <p>
-              BRBR is a <b>memecoin</b> designed to unify a community around a message of resilience and youth empowerment.
-              The branding emphasizes “Supportive Web. Real Help.” through future features and partnerships.
-            </p>
-          </div>
+        <h2 class="sectionTitle" style="margin-top:18px">1) What is BRBR?</h2>
+        <p class="muted">
+          BRBR is a community meme coin on BSC. The goal is visibility, culture, and a supportive web movement.
+          We use story-driven content (cinematic trailers, characters, short films) to unify the community.
+        </p>
 
-          <div class="paper-card reveal">
-            <h2>2) Mission & Values</h2>
-            <ul>
-              <li><b>Awareness:</b> bring visibility to bullying, harassment, and silent suffering.</li>
-              <li><b>Community:</b> a global network that supports and amplifies positive action.</li>
-              <li><b>Hope:</b> transform fear into courage — “Break the chain. Build hope.”</li>
-            </ul>
-          </div>
+        <h2 class="sectionTitle" style="margin-top:18px">2) Mission</h2>
+        <p class="muted">
+          “Global Youth. Global Hope.” — amplify voices, encourage courage, and build a positive community.
+        </p>
 
-          <div class="paper-card reveal">
-            <h2>3) Utility (Roadmap)</h2>
-            <p>
-              BRBR’s long-term ambition is a “Supportive Web” layer: resource hubs, story sharing, and community events.
-              These features are roadmap-based and may evolve with community feedback.
-            </p>
-          </div>
+        <h2 class="sectionTitle" style="margin-top:18px">3) Utility & Roadmap (Coming)</h2>
+        <ul class="muted">
+          <li>Story hub + content drops</li>
+          <li>Supportive web resources (association page + partners)</li>
+          <li>Community quests + meme campaigns</li>
+          <li>Transparency links (BscScan + DEX)</li>
+        </ul>
 
-          <div class="paper-card reveal">
-            <h2>4) Roadmap (High-Level)</h2>
-            <ol>
-              <li><b>Phase 1:</b> Launch website + cinematic story + community growth</li>
-              <li><b>Phase 2:</b> Partnerships + association page + resources hub</li>
-              <li><b>Phase 3:</b> Global campaigns + story platform + expanded support initiatives</li>
-            </ol>
-          </div>
+        <h2 class="sectionTitle" style="margin-top:18px">4) Disclaimer</h2>
+        <p class="tiny muted">
+          BRBR is a meme coin. Crypto assets are volatile and risky. This is not financial advice.
+        </p>
 
-          <div class="paper-card reveal">
-            <h2>5) Disclaimer</h2>
-            <p>
-              BRBR is a <b>memecoin</b>. This document is for information only and is <b>not financial advice</b>.
-              Crypto assets are volatile; you can lose all your funds. Always do your own research.
-            </p>
-          </div>
-        </div>
-
-        <div class="page-actions reveal">
-          <a class="btn btn-primary" href="index.html#token" data-click>Back to Token Reveal</a>
-          <a class="btn btn-ghost" href="index.html#links" data-click>Links</a>
+        <div class="inlineCtas">
+          <a class="pill primary" href="#" data-link="pancakeswap" data-click>Buy on PancakeSwap</a>
+          <a class="pill" href="#" data-link="bscscan" data-click>View on BscScan</a>
+          <a class="pill" href="#" data-link="linktree" data-click>Linktree</a>
         </div>
       </div>
     </section>
-
-    <footer class="footer footer-page">
-      <div class="foot-left">BARBOUR BRBR<br><span>Global Youth. Global Hope.</span></div>
-      <div class="foot-right">© <span id="year"></span> BRBR</div>
-    </footer>
   </main>
 
-  <div id="soundGate" class="sound-gate">
-    <div class="sound-gate-inner">
-      <div class="sound-gate-title">Enable Trailer Sound?</div>
-      <div class="sound-gate-sub">Click once to unlock audio (browser policy).</div>
-      <button class="btn btn-primary" id="soundGateBtn" data-click>Enable Sound</button>
-      <button class="btn btn-ghost" id="soundGateSkip" data-click>Keep Silent</button>
-    </div>
-  </div>
+  <audio id="clickSfx" src="assets/Click.mp3" preload="auto"></audio>
+  <script>
+    const BRBR_LINKS = {
+      linktree: "https://linktr.ee/barbourbrbr",
+      pancakeswap: "https://pancakeswap.finance/swap?outputCurrency=0xf97522ABEf762d28729E073019343b72C6e8D2C1&chain=bsc",
+      bscscan: "https://bscscan.com/token/0xf97522ABEF762d28729E073019343b72C6e8D2C1"
+    };
+    const clickSfx = document.getElementById("clickSfx");
+    const safePlay = (a)=>{ try{ a.currentTime=0; a.play().catch(()=>{});}catch(e){} };
 
-  <script src="script.js"></script>
+    document.addEventListener("click", (e)=>{
+      const dc = e.target.closest("[data-click]");
+      if (dc && clickSfx) safePlay(clickSfx);
+
+      const a = e.target.closest("a[data-link]");
+      if (!a) return;
+      e.preventDefault();
+      const key = a.getAttribute("data-link");
+      const url = BRBR_LINKS[key];
+      if (url) window.open(url,"_blank","noopener,noreferrer");
+    });
+  </script>
 </body>
 </html>
