--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
   <!-- TOP NAV -->
   <header class="topbar">
+    <a href="legal.html" class="navLink">Legal</a>
     <a class="brand" href="#top">
       <span class="brandDot"></span>
       <span class="brandText">BARBOUR <b>BRBR</b></span>
@@ -220,18 +221,28 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="footerLeft">
-        <div class="footerBrand">BARBOUR <b>BRBR</b></div>
-        <div class="tiny muted">Global Youth. Global Hope.</div>
-      </div>
+  <div class="footerLeft">
+    <div class="footerBrand">BARBOUR <b>BRBR</b></div>
+    <div class="tiny muted">Global Youth. Global Hope.</div>
 
-      <div class="footerLinks">
-        <a href="#" data-link="linktree" data-click>Linktree</a>
-        <a href="#" data-link="pancakeswap" data-click>PancakeSwap</a>
-        <a href="#" data-link="bscscan" data-click>BscScan</a>
-      </div>
-    </footer>
-  </main>
+    <div class="tiny muted" style="margin-top:8px">
+      © <span id="year"></span> Barbour BRBR — All rights reserved.
+      <a href="legal.html" class="mini" style="margin-left:8px">Legal</a>
+    </div>
+
+    <div class="tiny muted" style="margin-top:6px">
+      Contact: <b><span id="emailText"></span></b>
+      <a class="mini" href="#" data-email data-click style="margin-left:8px">Email</a>
+    </div>
+  </div>
+
+  <div class="footerLinks">
+    <a href="#" data-link="linktree" data-click>Linktree</a>
+    <a href="#" data-link="pancakeswap" data-click>PancakeSwap</a>
+    <a href="#" data-link="bscscan" data-click>BscScan</a>
+  </div>
+</footer>
+
 
   <!-- AUDIO (autoplay blocked by browsers; enabled on Trailer Mode / first interaction) -->
   <audio id="ambience" src="assets/atmosphere-sound-effect.mp3" preload="auto" loop></audio>
