--- a/whitepaper.html
+++ b/whitepaper.html
@@ -16,6 +16,7 @@
   </div>
 
   <header class="topbar">
+    <a href="legal.html" class="navLink">Legal</a>
     <a class="brand" href="index.html">
       <span class="brandDot"></span>
       <span class="brandText">BARBOUR <b>BRBR</b></span>
