--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!doctype html>
 <html lang="en">
+  <meta http-equiv="Content-Security-Policy"
+content="default-src 'self' https: data:;
+script-src 'self';
+style-src 'self' 'unsafe-inline';
+img-src 'self' https: data:;
+media-src 'self' https:;
+base-uri 'self';
+form-action 'self';
+frame-ancestors 'none';
+upgrade-insecure-requests">
+<meta name="referrer" content="no-referrer">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
